    fMxfmafNx functions.

* <math.h> functions for floating-point maximum and minimum,
  corresponding to new operations in IEEE 754-2019, and corresponding
  <tgmath.h> macros, are added from draft ISO C2X: fmaximum,
  fmaximum_num, fmaximum_mag, fmaximum_mag_num, fminimum, fminimum_num,
  fminimum_mag, fminimum_mag_num and corresponding functions for float,
  long double, _FloatN and _FloatNx.

* The __STDC_IEC_60559_BFP__ and __STDC_IEC_60559_COMPLEX__ macros are
  predefined as specified in TS 18661-1:2014.

* The exp10 functions in <math.h> now have a corresponding type-generic
  macro in <tgmath.h>.

* The ISO C2X macro _PRINTF_NAN_LEN_MAX has been added to <stdio.h>.

* printf-family functions now support the %b format for output of
  integers in binary, as specified in draft ISO C2X, and the %B variant
  of that format recommended by draft ISO C2X.

* A new DSO sorting algorithm has been added in the dynamic linker that uses
  topological sorting by depth-first search (DFS), solving performance issues
  of the existing sorting algorithm when encountering particular circular
  object dependency cases.

* A new tunable, glibc.rtld.dynamic_sort, can be used to select between
  the two DSO sorting algorithms.  The default setting of '2' uses the
  new DFS-based algorithm.  The setting '1' switches to the old
  algorithm used in glibc 2.33 and earlier.

* ABI support for a new function '__memcmpeq'. '__memcmpeq' is meant
  to be used by compilers for optimizing usage of 'memcmp' when its
  return value is only used for its boolean status.

* Support for automatically registering threads with the Linux rseq
  system call has been added.  This system call is implemented starting
  from Linux 4.18.  The Restartable Sequences ABI accelerates user-space
  operations on per-cpu data.  It allows user-space to perform updates
  on per-cpu data without requiring heavy-weight atomic operations.
  Automatically registering threads allows all libraries, including